@@ -25,6 +25,7 @@
 #include "KeySend.h"
 #include "ClearQuestionDlg.h"
 #include "CreateShortcutDlg.h"
+#include "PasswordSubsetDlg.h"
 
 #include <stdio.h>
 #include <sys/timeb.h>
@@ -1002,6 +1003,40 @@ void DboxMain::OnCopyPasswordMinimize()
   }
 }
 
+void DboxMain::OnDisplayPswdSubset()
+{
+  if (!SelItemOk())
+    return;
+
+  CItemData *ci = getSelectedItem();
+  ASSERT(ci != NULL);
+
+  CItemData *ci_original(ci);
+
+  uuid_array_t base_uuid, entry_uuid;
+  const CItemData::EntryType entrytype = ci->GetEntryType();
+  if (entrytype == CItemData::ET_ALIAS || entrytype == CItemData::ET_SHORTCUT) {
+    // This is an alias/shortcut
+    ci->GetUUID(entry_uuid);
+    if (entrytype == CItemData::ET_ALIAS)
+      m_core.GetAliasBaseUUID(entry_uuid, base_uuid);
+    else
+      m_core.GetShortcutBaseUUID(entry_uuid, base_uuid);
+
+    ItemListIter iter = m_core.Find(base_uuid);
+    if (iter != End()) {
+      ci = &iter->second;
+    }
+  }
+
+  CPasswordSubsetDlg DisplaySubsetDlg(this, ci);
+
+  app.DisableAccelerator();
+  if (DisplaySubsetDlg.DoModal() != IDCANCEL)
+    UpdateAccessTime(ci_original);
+
+  app.EnableAccelerator();
+}
 
 void DboxMain::OnCopyUsername()
 {
