@@ -180,6 +180,7 @@ BEGIN
         MENUITEM "&Copy Password to Clipboard", ID_MENUITEM_COPYPASSWORD
         MENUITEM "Copy &Notes to Clipboard",    ID_MENUITEM_COPYNOTESFLD
         MENUITEM "Copy &URL to Clipboard",      ID_MENUITEM_COPYURL
+        MENUITEM "Display subset of Password",  ID_MENUITEM_PASSWORDSUBSET
         MENUITEM SEPARATOR
         MENUITEM "&Browse to URL",              ID_MENUITEM_BROWSEURL
         MENUITEM "Edit/&View Entry...",         ID_MENUITEM_EDIT
@@ -321,6 +322,7 @@ BEGIN
     ID_MENUITEM_APPLYFILTER      "\nSet/Clear Filters"
     ID_MENUITEM_EDITFILTER       "\nEdit Filters"
     ID_MENUITEM_MANAGEFILTERS    "\nManage Filters"
+    ID_MENUITEM_PASSWORDSUBSET   "\nDisplay subset of Password"
 END
 
 STRINGTABLE
@@ -359,6 +361,7 @@ BEGIN
     "S",            ID_TOOLBUTTON_FINDCASE, VIRTKEY, CONTROL, ALT
     "T",            ID_MENUITEM_AUTOTYPE,   VIRTKEY, CONTROL
     "U",            ID_MENUITEM_COPYUSERNAME, VIRTKEY, CONTROL
+    VK_OEM_MINUS,   ID_MENUITEM_PASSWORDSUBSET, VIRTKEY, CONTROL
     VK_DELETE,      ID_MENUITEM_DELETE,     VIRTKEY
     VK_DELETE,      ID_MENUITEM_CLEARCLIPBOARD, VIRTKEY, CONTROL
     VK_INSERT,      ID_MENUITEM_COPYPASSWORD, VIRTKEY, CONTROL
